# cardstock

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
cardstock/: Cargo.toml  index.html  mod.js  prod_build.sh
cardstock/src/: cardstock.rs  lib.rs
server/: Cargo.toml  index.js  package.json
server/api/: package.json  pnpm-lock.yaml
server/api/src/: database.ts
server/py/: main.py  populate.py
server/rust/: Cargo.toml  main.rs  newer_mtgjson.rs  old.rs
server/rust/src/: main.rs
server/src/: app.ts  database.ts  index.ts  main.rs
src/: App.css  App.jsx  App.tsx  api.jsx  api.tsx  api_reducer.tsx  authContext.tsx  authGate.tsx  card.tsx  cardMarketButtons.css  cardMarketButtons.tsx  cardNameLink.css  cardNameLink.tsx  cardstock.rs  dashboard.css  dashboard.tsx  events.tsx  firebase.tsx  firebaseConfig.jsx  graph.tsx  lib.rs  loading.tsx  login.css  login.jsx  login.tsx  main.jsx  main.rs  main.tsx  main_reducer.tsx  market_actions.tsx  market_reducer.tsx  networth.tsx  old.jsx  portfolioCardList.tsx  routes.jsx  routes.tsx  sample_cards.txt  scryfall.tsx  scryfall_reducer.tsx  searchResultsListLink.tsx  (+5 more)
src/api/: actionTypes.tsx  scryfall.tsx
src/components/: cardMarketButtons.jsx  dashboard.jsx  networth.jsx  portfolio.jsx
src/hooks/: useAuth.tsx  useSelect.tsx
src/types/: card.tsx  env.d.ts  market.tsx  scryfallCard.tsx  user.tsx
