[package]
name = "cardstock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bevy = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
js-sys = "0.3"
web-sys = { version = "0.3.22", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlFramebuffer',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlActiveInfo',
  'WebGlVertexArrayObject',
  'WebGlSync',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }
