[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.21"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.17.2"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
uuid = { version = "1.1.0", features = ["v4"] }
